Some wording fixes and Mdos4 description corrected to the real one

--- a/index.html
+++ b/index.html
@@ -648,20 +648,22 @@
 
           <ul class="card-exp__responsabilities__wrapper">
             <li class="card-exp__responsabilities">
-              A / B tests of copies, images and buttons
+              • UX/UI design for three different product; an App, a web pages
+              and landing pages for every business target.
             </li>
             <li class="card-exp__responsabilities">
-              Designing and optimizing end-to-end customer acquisition funnels
-              to drive new customer acquisition.
+              Writing, strategy and content for B2B and B2G business
+              presentations.
             </li>
             <li class="card-exp__responsabilities">
               Testing with internal company personnel.
             </li>
             <li class="card-exp__responsabilities">
-              Heatmaps and recordings of visits.
+              Marketing strategies for communication and product positioning.
             </li>
             <li class="card-exp__responsabilities">
-              Insights taken from Google Analytics.
+              Creation of videos, images, sliders, gifs and banners for the app,
+              web pages and social networks.
             </li>
           </ul>
 
@@ -723,7 +725,6 @@
             <ul>
               <li>HTML5</li>
               <li>CSS3</li>
-              <li>Bootstrap</li>
             </ul>
           </div>
           <div class="skill-set__section">
@@ -740,7 +741,7 @@
               <h4 class="skill-set__subtitle">—&nbsp; Marketing Interests</h4>
               <ul>
                 <li>Growth</li>
-                <li>Marketing</li>
+                <li>Inbound Marketing</li>
                 <li>Storytelling</li>
               </ul>
             </div>
