Maintainnance: Tools and Links

--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
             <ul class="main-description__contact-items-wrapper">
               <li class="main-description__contact-link">
                 <a
-                  href="mailto:leningraphic@gmail.com?subject=Hey%20Lenin,%20I'm%20reaching%20out%20to%20you%20"
+                  href="mailto:leninxperience@gmail.com?subject=Hey%20Lenin,%20I'm%20reaching%20out%20to%20you%20"
                 >
-                  leningraphic@gmail.com
+                  leninxperience@gmail.com
                 </a>
               </li>
-
               <li class="main-description__contact-link">
                 <a href="tel:+6494461709">549-3513766049</a>
               </li>
@@ -717,6 +716,8 @@
               <li>Slack</li>
               <li>Google Slides</li>
               <li>Optimal Workshop</li>
+              <li>GitHub</li>
+              <li>VS Code</li>
             </ul>
           </div>
 
@@ -767,9 +768,9 @@
                 <ul>
                   <li class="CTA__contact-link">
                     <a
-                      href="mailto:leningraphic@gmail.com?subject=Hey%20Lenin,%20I%20want%20to%20connect%20with%20you%20"
+                      href="mailto:leninxperience@gmail.com?subject=Hey%20Lenin,%20I%20want%20to%20connect%20with%20you%20"
                     >
-                      <!-- spanish message: href="mailto:leningraphic@gmail.com?subject=Te%20escribo%20porque%20me%20Interesa:%20" -->
+                      <!-- spanish message: href="mailto:leninxperience@gmail.com?subject=Te%20escribo%20porque%20me%20Interesa:%20" -->
                       Send me an email
                     </a>
                     <div>&nbsp;&nbsp;&nbsp;&nbsp;📩</div>
