First time stashing lets go

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <ul class="main-description__contact-items-wrapper">
               <li class="main-description__contact-link">
                 <a
-                  href="mailto:leningraphic@gmail.com?subject=Te%20escribo%20porque%20me%20Interesa:%20"
+                  href="mailto:leninxperience@gmail.com?subject=Hey%20Lenin,%20I'm%20reaching%20out%20to%20you%20"
                 >
-                  leningraphic@gmail.com
+                  leninxperience@gmail.com
                 </a>
               </li>
 
@@ -765,9 +765,10 @@
                 <ul>
                   <li class="CTA__contact-link">
                     <a
-                      href="mailto:leningraphic@gmail.com?subject=Te%20escribo%20porque%20me%20Interesa:%20"
+                      href="mailto:leninxperience@gmail.com?subject=Hey%20Lenin,%20I%20want%20to%20connect%20with%20you%20"
                     >
-                      Envíame un mail
+                      <!-- spanish message: href="mailto:leninxperience@gmail.com?subject=Te%20escribo%20porque%20me%20Interesa:%20" -->
+                      Send me an email
                     </a>
                     <div>&nbsp;&nbsp;&nbsp;&nbsp;📩</div>
                   </li>
