fighting against Stash, I losed my changes

--- a/index.html
+++ b/index.html
@@ -63,26 +63,29 @@
           <h3>Portafolio</h3>
           <div class="main-description__portfolio-items-wrapper">
             <div class="main-description__contact-link">
-              <a target="_blank" href="https://bit.ly/m/LeninCuadra">Website</a>
-            </div>
-            <p class="main-description__contact-link__inline">|</p>
-            <div
-              class="main-description__contact-link main-description__contact-link__inline"
-            >
-              <!-- main-description__contact-link__inline -->
-              <a target="_blank" href="https://bit.ly/LeninCuadra-Linkedin">
-                LinkedIn
+              <a target="_blank" href="https://bit.ly/m/LeninCuadra">
+                https://bit.ly/m/LeninCuadra
               </a>
             </div>
 
-            <!-- BUTTON for PDF -->
-            <!-- <p class="main-description__contact-link__inline">|</p> -->
-
+            <div
+              class="main-description__contact-link main-description__contact-link__inline"
+            ></div>
+          </div>
+        </div>
+        <div class="main-description__contact-header-wrapper">
+          <h3>LinkedIn</h3>
+          <div class="main-description__portfolio-items-wrapper">
             <div
               class="main-description__contact-link main-description__contact-link__inline"
             >
-              <!-- <button onclick="exportPDF()">Down PDF</button> -->
+              <a target="_blank" href="https://bit.ly/LeninCuadra-Linkedin">
+                https://www.linkedin.com/in/lenincuadra
+              </a>
             </div>
+            <div
+              class="main-description__contact-link main-description__contact-link__inline"
+            ></div>
           </div>
         </div>
       </div>
