Profesional Description Updated

--- a/index.html
+++ b/index.html
@@ -33,10 +33,19 @@
         </div>
         <div class="main-description__content">
           <p>
-            Soy un estratega creativo orientado a resolver problemas para mi
-            equipo, para los stakeholders y usuarios finales, utilizando toda mi
-            experiencia de mi carrera; mi enfoque de Design Thinking, mi enfoque
-            de Marketing y toda mi experiencia en el mundo gráfico.
+            Especialista en crear experiencias digitales intuitivas y atractivas
+            que generan valor real para los usuarios y objetivos de negocio.
+            Experiencia en investigación de usuarios, diseño centrado en el
+            usuario, wireframes, prototipos interactivos y diseño visual
+            orientado a resultados.
+          </p>
+
+          <p>
+            Habilidad comprobada para colaborar con equipos multidisciplinarios
+            en la conceptualización y ejecución de productos digitales
+            funcionales y escalables. Enfocado en resolver problemas complejos
+            mediante soluciones innovadoras y orientadas al impacto en métricas
+            clave como la conversión, retención y satisfacción del usuario.
           </p>
         </div>
       </div>
@@ -59,20 +68,7 @@
             </ul>
           </div>
         </div>
-        <div class="main-description__contact-header-wrapper">
-          <h3>Portafolio</h3>
-          <div class="main-description__portfolio-items-wrapper">
-            <div class="main-description__contact-link">
-              <a target="_blank" href="https://bit.ly/m/LeninCuadra">
-                https://bit.ly/m/LeninCuadra
-              </a>
-            </div>
 
-            <div
-              class="main-description__contact-link main-description__contact-link__inline"
-            ></div>
-          </div>
-        </div>
         <div class="main-description__contact-header-wrapper">
           <h3>LinkedIn</h3>
           <div class="main-description__portfolio-items-wrapper">
@@ -83,6 +79,20 @@
                 https://www.linkedin.com/in/lenincuadra
               </a>
             </div>
+            <div
+              class="main-description__contact-link main-description__contact-link__inline"
+            ></div>
+          </div>
+        </div>
+        <div class="main-description__contact-header-wrapper">
+          <h3>Portafolio</h3>
+          <div class="main-description__portfolio-items-wrapper">
+            <div class="main-description__contact-link">
+              <a target="_blank" href="https://bit.ly/m/LeninCuadra">
+                https://bit.ly/m/LeninCuadra
+              </a>
+            </div>
+
             <div
               class="main-description__contact-link main-description__contact-link__inline"
             ></div>
@@ -791,26 +801,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- <div class="CTA__contact-header-wrapper">
-                <h3>Portfolio</h3>
-                <div class="CTA__portfolio-items-wrapper">
-                  <div class="CTA__contact-link">
-                  
-                    <a target="_blank" href="https://bit.ly/m/LeninCuadra">
-                      Web
-                    </a>
-                  </div>
-                  
-                  <div class="CTA__contact-link">
-                    <a
-                      target="_blank"
-                      href="https://bit.ly/LeninCuadra-Linkedin"
-                    >
-                      LinkedIn
-                    </a>
-                  </div>
-                </div>
-              </div> -->
             </div>
           </footer>
         </div>
